--- a/css/index.css
+++ b/css/index.css
@@ -61,8 +61,7 @@ p{
 
 .shape-container div {
   display:inline-block;
-  width:20%;
-  height:45px;
+  width:25%;
 }
 
 .shape-container{
@@ -70,7 +69,8 @@ p{
   width: 50%;
   border:none;
   position:relative;
-  top:30%;
+  top:20%;
+  text-align: center;
 }
 
 .red {
@@ -85,9 +85,102 @@ p{
 	color:purple;
 }
 
-div.red.oval.blank{
-	margin-right:10px;
+.diamond {
+	overflow: hidden;
+	position: relative;
+	margin: 15% auto;
+	padding: 20%;
+	width: 0;
+	transform: rotate(-120deg) skewX(30deg) scaleY(.866);
 }
+
+.diamond.stripe.green:before {
+	position: absolute;
+	top: 0%; right:  -37.5%; bottom:  0; left:  -37.5%;
+	transform: scaleY(1.155) skewX(-30deg) rotate(180deg);;
+	background: linear-gradient(90deg,  green 50%, transparent 50%);
+	background-size: 4px;
+	content: ''
+}
+
+.diamond.stripe.purple:before{
+	position: absolute;
+	top: 0%; right:  -37.5%; bottom:  0; left:  -37.5%;
+	transform: scaleY(1.155) skewX(-30deg) rotate(180deg);;
+	background: linear-gradient(90deg,  purple 50%, transparent 50%);
+	background-size: 4px;
+	content: ''
+}
+
+.diamond.full.red:before{
+	position: absolute;
+	top: 0%; right:  -37.5%; bottom:  0; left:  -37.5%;
+	transform: scaleY(1.155) skewX(-30deg) rotate(180deg);;
+	background: linear-gradient(90deg,  red 100%, transparent 0%);
+	background-size: 4px;
+	content: ''
+}
+
+.diamond.green.blank{
+	color:white;
+	border: 2px solid green;
+}
+
+.diamond.purple.blank{
+	color:white;
+	border: 2px solid purple;
+}
+
+.diamond.red.blank{
+	color:white;
+	border:2px solid red;
+}
+
+.squiggle.full:before{
+	content:"~";
+	display:inline-block;
+	-ms-transform: rotate(90deg); /* IE 9 */
+	-webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+	transform: rotate(90deg);
+	font-size:60px;
+}
+
+
+.oval{
+	overflow: hidden;
+	position: relative;
+	margin: 15% auto;
+	padding: 15%;
+	width:30px;
+	height:45px;
+	border-radius:50px / 100px;
+}
+
+.oval.red.blank{
+	color:white;
+	border:2px solid red;
+}
+
+.oval.green.blank{
+	color:white;
+	border:2px solid green;
+}
+
+.oval.purple.stripe:before{
+	position: absolute;
+	top: 0%; right:  -37.5%; bottom:  0; left:  -37.5%;
+	transform: scaleY(1.155) skewX(-30deg) rotate(180deg);;
+	background: linear-gradient(90deg, purple 50%, transparent 50%);
+	background-size: 4px;
+	content: ''
+}
+
+/*.diamond.solid:before {
+  content:"\2666";
+  display:inline-block;
+  font-size:50px;
+  width:50px;
+}*/
 
 /*.oval.blank:before {
 	content:"\2B2D";
@@ -95,38 +188,8 @@ div.red.oval.blank{
 	-ms-transform: rotate(90deg); 
 	-webkit-transform: rotate(90deg); 
 	transform: rotate(90deg);
-	font-size:50px;
+	font-size:25px;
 }*/
-
-.diamond.blank:before {
-	content:"\25C7";
-	display:inline-block;
-	font-size:50px;
-}
-
-.diamond.solid:before {
-  content:"\2666";
-  display:inline-block;
-  font-size:50px;
-  width:50px;
-}
-
-.diamond.stripe:before{
-	content:"\2666";
-  display:inline-block;
-  font-size:50px;
-  width:50px;
-}
-
-.squiggle.full.purple {
-	background: url()
-	display:inline-block;
-	-ms-transform: rotate(90deg); /* IE 9 */
-	-webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
-	transform: rotate(90deg);
-	width:15px;
-	height:15px;
-}
 
 
 
