--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ p{
 	background-color:#EBEBEB;
 }
 
-.card-selected:hover{
+.card-selected{
 	float:left;
 	border:1px solid #d4d4d4;
 	border-bottom-width:5px;
@@ -78,7 +78,7 @@ p{
 
 .shape-container div {
   display:inline-block;
-  width:25%;
+  width:28%;
 }
 
 .shape-container{
@@ -106,7 +106,7 @@ p{
 	overflow: hidden;
 	position: relative;
 	margin: 15% auto;
-	padding: 20%;
+	padding: 14.5%;
 	width: 0;
 	transform: rotate(-120deg) skewX(30deg) scaleY(.866);
 }
@@ -167,7 +167,7 @@ p{
 	overflow: hidden;
 	position: relative;
 	margin: 15% auto;
-	padding: 15%;
+	padding: 10%;
 	width:30px;
 	height:45px;
 	border-radius:50px / 100px;
